Fix alignments for card row and quote

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ li a:link, li a:visited, li a:hover, li a:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 32px;
 }
 
@@ -157,7 +157,7 @@ li a:link, li a:visited, li a:hover, li a:active {
 }
 
 .quote-box {
-    max-width: 900px;
+    max-width: 750px;
 
     display:flex;
     flex-direction: column;
@@ -170,8 +170,6 @@ li a:link, li a:visited, li a:hover, li a:active {
     font-size: 36px;
     font-weight: lighter;
     font-style: italic;
-
-    display: flex;
 }
 
 .quote-attribution {
